--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sumérgete en la historia y el misterio de Chernóbil y su Zona de Exclusión. Explora imágenes y videos impresionantes, conoce la tragedia que cambió la historia y experimenta una exploración virtual interactiva única." />
+    <meta name="theme-color" content="#16abff33" />
+    <meta name="keywords" content="Chernóbil, Zona de Exclusión, Desastre Nuclear, Pripyat, Exploración Virtual, Ruinas, Radiación, Historia, Turismo Extremo" />
+    <meta name="author" content="Tu Nombre o Nombre de la Organización" />
+    <meta name="date" content="2023-08-25" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="es" />
+    <meta name="type" content="Página Web, Recorrido Virtual, Turismo Extremo, Historia" />
+    <meta property="og:title" content="Chernóbil y la Zona de Exclusión: Explorando un Pasado Abandonado" />
+    <meta property="og:description" content="Sumérgete en la historia y el misterio de Chernóbil y su Zona de Exclusión. Explora imágenes y videos impresionantes, conoce la tragedia que cambió la historia y experimenta una exploración virtual interactiva única." />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/chernobyl/5.jpg" />
+    <meta property="og:url" content="https://chernobyl-exclusion-zone.pages.dev/" />
+    <title>Chernobyl y la Zona de Exclusión</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
